# genai-multi-agent-support

./: .coverage  .env.example  README.md  app.py  create_sample_policy.py  llm_factory.py  mcp_server.py  pyproject.toml  requirements.txt  setup_database.py
agents/: __init__.py  rag_agent.py  router.py  sql_agent.py
data/chroma_db/: chroma.sqlite3
tests/: __init__.py  conftest.py  test_app.py  test_database.py  test_llm_factory.py  test_lmstudio.py  test_rag_agent.py  test_router.py  test_security.py
ui/: chat.py  sidebar.py  styles.py
